2008-05-14  Jonathan Pobst  <monkey@jpobst.com>

	* FlowLayoutPanel.cs, ScrollableControl.cs: We need to layout the
	flow panel without scrolling first, and then calculate the 
	scrolling based on the new layout.  [Fixes bug #390149]

2008-05-14  Jonathan Pobst  <monkey@jpobst.com>

	* ListBox.cs: Invalidate after scrolling up when selected index
	changes.  [Fixes bug #390151]

2008-05-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When setting mode to Simple *and* height hasn't been
	set, default height to 150. I tried first with DefaultSize, but this
	is not generating a SetBoundsCore call before handle creation time, so
	we can take it into account. This is just what .net does.

2008-05-13  Jonathan Pobst  <monkey@jpobst.com>

	* XplatUIX11.cs, X11Keyboard.cs: Had to revert eno's r103060,
	as it broke some stuff.  Calberto is filing a bug for eno to
	work with.

2008-05-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When handling PageDown pressed event, set SelectedIndex
	to 0 is the current value is -1, and if style is not Simple, just
	return, like .net does.
	Fixes part of #374713.

2008-05-13  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs, ThemeVisualStyles.cs: When calculating
	progress bar stuffs, use doubles instead of ints to prevent
	overflow.  [Fixes bug #389798]

2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIX11.cs, X11Keyboard.cs :
	  Significant refactoring on XIM support. Now IM engine UI
	  should show up, at mostly-correct preedit position.
	  - Eliminated use of FocusWindow, as it is never mapped
	    and hence blocks correct preedit position. XIC is now
	    created per window, and it must be destroyed too when
	    the window is destroyed.
	  - WM_QUIT messages should not be filtered even when hwnd
	    is zombie. Filtering it could cause endless loop.
	  - Preedit position must move only when the window is alive.