@@ -1,5 +1,10 @@
 2008-05-14  Jonathan Pobst  <monkey@jpobst.com>
 
+	* Control.cs: Use long instead of int when handling WParam from
+	mousewheel scrolling.  Int was overflowing on Win64.
+
+2008-05-14  Jonathan Pobst  <monkey@jpobst.com>
+
 	* FlowLayoutPanel.cs, ScrollableControl.cs: We need to layout the
 	flow panel without scrolling first, and then calculate the 
 	scrolling based on the new layout.  [Fixes bug #390149]
